[tool.poetry]
name = "gcp-test-youtuber"
version = "0.1.0"
description = ""
authors = ["Evan Lin <evan.if.lin@linecorp.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
google-api-python-client = "^2.147.0"
google-auth-oauthlib = "^1.2.1"
google-cloud-secret-manager = "^2.20.2"
gunicorn = "^23.0.0"
langchain-community = "^0.3.1"
youtube-transcript-api = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
